--- a/HotelRooms/HotelRooms.csproj
+++ b/HotelRooms/HotelRooms.csproj
@@ -46,14 +46,21 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="RezervationForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="RezervationForm.Designer.cs">
+      <DependentUpon>RezervationForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Hotel.cs" />
+    <Compile Include="HotelRoom.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reception.cs" />
+    <Compile Include="Reservation.cs" />
+    <EmbeddedResource Include="RezervationForm.resx">
+      <DependentUpon>RezervationForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
